chore: update extension name

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
-    "ext_extension_name": { "message": "The Great Suspender" },
+    "ext_extension_name": { "message": "The Great Suspender++" },
     "ext_extension_description": { "message": "Make your computer run smoothly by suspending the tabs you aren't using" },
-    "ext_default_title": { "message": "The Great Suspender" },
+    "ext_default_title": { "message": "The Great Suspender++" },
     "ext_cmd_toggle_tab_suspension_description": { "message": "Suspend/Unsuspend active tab" },
     "ext_cmd_toggle_tab_pause_description": { "message": "Pause/Unpause suspension of active tab" },
     "ext_cmd_suspend_selected_tabs_description": { "message": "Suspend selected tabs" },
@@ -48,7 +48,7 @@
     "html_history_saved_sessions": { "message": "Saved sessions" },
     "html_history_import_session": { "message": "Import session" },
     "html_notice_title": { "message": "Notice" },
-    "html_notice_important_notice": { "message": "Important notice from The Great Suspender" },
+    "html_notice_important_notice": { "message": "Important notice from The Great Suspender++" },
     "html_options_title": { "message": "Settings" },
     "html_options_suspend_title": { "message": "Automatic tab suspension" },
     "html_options_suspended_title": { "message": "Suspended tabs" },
@@ -104,7 +104,7 @@
     "html_options_whitelist_tooltip_line2": { "message": "To whitelist multiple sites in one line you can specify part of the url instead:" },
     "html_options_whitelist_tooltip_line3": { "message": "You can also specify regular expressions by enclosing the text in forward slashes:" },
     "html_options_whitelist_test": { "message": "Test whitelist" },
-    "html_options_other_enable_context_menu": { "message": "Add The Great Suspender to right-click context menu" },
+    "html_options_other_enable_context_menu": { "message": "Add The Great Suspender++ to right-click context menu" },
     "html_options_other_enable_context_menu_tooltip_line1": { "message": "Add controls for this extension to the right-click menu of a web page." },
     "html_options_other_enable_context_menu_tooltip_line2": { "message": "This will give you access to advanced suspending actions not available" },
     "html_options_other_enable_context_menu_tooltip_line3": { "message": "elsewhere in the extension." },
@@ -170,7 +170,7 @@
     "html_permissions_backup": { "message": "Please note: changing this option will cause all your suspended tabs will briefly disappear.\nJust in case, now might be a good time to save a backup of your current tab session." },
     "html_update_title": { "message": "Update" },
     "html_update_heading2": { "message": "is about to get greater" },
-    "html_update_info": { "message": "A new version of The Great Suspender is ready to be installed.\nPlease note: during the update your suspended tabs will briefly disappear." },
+    "html_update_info": { "message": "A new version of The Great Suspender++ is ready to be installed.\nPlease note: during the update your suspended tabs will briefly disappear." },
     "html_update_info_withbackup": { "message": "Just in case, now might be a good time to save a backup of your current tab session." },
     "html_update_info_nobackup_prefix": { "message": "It is strongly recommended that you export a copy of your current session from " },
     "html_update_info_nobackup_suffix": { "message": " before continuing with the update." },
