--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -1,7 +1,7 @@
 {
-  "ext_extension_name": { "message": "The Great Suspender" },
+  "ext_extension_name": { "message": "The Great Suspender++" },
   "ext_extension_description": { "message": "Faça o seu computador funcionar sem problemas suspendendo as guias que você não está usando" },
-  "ext_default_title": { "message": "The Great Suspender" },
+  "ext_default_title": { "message": "The Great Suspender++" },
   "ext_cmd_toggle_tab_suspension_description": { "message": "Suspender/Recarregar a guia ativa" },
   "ext_cmd_toggle_tab_pause_description": { "message": "Pausar/Retomar suspensão da guia ativa" },
   "ext_cmd_suspend_selected_tabs_description": { "message": "Suspender guias selecionadas" },
@@ -48,7 +48,7 @@
   "html_history_saved_sessions": { "message": "Sessões salvas" },
   "html_history_import_session": { "message": "Importar sessão" },
   "html_notice_title": { "message": "Aviso" },
-  "html_notice_important_notice": { "message": "Aviso importante do The Great Suspender" },
+  "html_notice_important_notice": { "message": "Aviso importante do The Great Suspender++" },
   "html_options_title": { "message": "Configurações" },
   "html_options_suspend_title": { "message": "Suspensão de aba automática" },
   "html_options_suspended_title": { "message": "Guias suspensas" },
@@ -104,7 +104,7 @@
   "html_options_whitelist_tooltip_line2": { "message": "Para colocar na lista branca vários sites em uma linha, você pode especificar parte da URL:" },
   "html_options_whitelist_tooltip_line3": { "message": "Você também pode especificar expressões regulares colocando o texto em barras:" },
   "html_options_whitelist_test": { "message": "Lista branca de teste" },
-  "html_options_other_enable_context_menu": { "message": "Adicionar The Great Suspender no menu de contexto do clique do botão direito" },
+  "html_options_other_enable_context_menu": { "message": "Adicionar The Great Suspender++ no menu de contexto do clique do botão direito" },
   "html_options_other_enable_context_menu_tooltip_line1": { "message": "Adicione controles para esta extensão no menu do botão direito de uma página da web." },
   "html_options_other_enable_context_menu_tooltip_line2": { "message": "Isso lhe dará acesso a ações avançadas de suspensão que não estão disponíveis" },
   "html_options_other_enable_context_menu_tooltip_line3": { "message": "em outro lugar na extensão." },
@@ -170,7 +170,7 @@
   "html_permissions_backup": { "message": "Observação: a alteração dessa opção fará com que todas as suas guias suspensas desapareçam brevemente.\nNeste caso, agora pode ser um bom momento para fazer um backup da sua sessão de guias atuais." },
   "html_update_title": { "message": "Atualização" },
   "html_update_heading2": { "message": "está prestes a ficar maior" },
-  "html_update_info": { "message": "Uma nova versão do The Great Suspender está pronta para ser instalada.\nObservação: durante a atualização, suas guias suspensas desaparecerão brevemente." },
+  "html_update_info": { "message": "Uma nova versão do The Great Suspender++ está pronta para ser instalada.\nObservação: durante a atualização, suas guias suspensas desaparecerão brevemente." },
   "html_update_info_withbackup": { "message": "este caso, agora pode ser um bom momento para fazer um backup da sua sessão de guias atuais." },
   "html_update_info_nobackup_prefix": { "message": "É altamente recomendável que você exporte uma cópia de sua sessão atual de " },
   "html_update_info_nobackup_suffix": { "message": " antes de continuar com a atualização." },
