--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -9,9 +9,9 @@
   "ext_cmd_unsuspend_active_window_description": { "message": "Aktif penceredeki tüm sekmelerin askıya almasını kaldır" },
   "ext_cmd_unsuspend_all_windows_description": { "message": "Tüm pencerelerde tüm sekmelerin askıya almasını kaldır" },
   "ext_cmd_unsuspend_selected_tabs_description": { "message": "Seçilen sekmenin askısını kaldır" },
-  "ext_default_title": { "message": "The Great Suspender" },
+  "ext_default_title": { "message": "The Great Suspender++" },
   "ext_extension_description": { "message": "Kullanmadığınız sekmeleri askıya alarak bilgisayarınızın sorunsuz çalışmasını sağlayın" },
-  "ext_extension_name": { "message": "The Great Suspender" },
+  "ext_extension_name": { "message": "The Great Suspender++" },
   "html_about_browserstack": { "message": "browserstack" },
   "html_about_browserstack_prefix": { "message": "Ayrıca teşekkürler" },
   "html_about_browserstack_suffix": { "message": "ücretsiz Chrome test araçları sağladığı için." },
@@ -156,7 +156,7 @@
   "html_suspended_toast_not_connected": { "message": "Internete bağlı değilsiniz" },
   "html_suspended_toast_reload_disabled": { "message": "Otomatik geri yükleme geçici olarak devre dışı." },
   "html_update_heading2": { "message": "daha büyük olma üzere" },
-  "html_update_info": { "message": "The Great Suspender yeni bir sürümü kurulmaya hazır.\nLütfen dikkat: Güncelleme sırasında askıya alınmış sekmeleriniz kısa bir süre kaybolacaktır." },
+  "html_update_info": { "message": "The Great Suspender++ yeni bir sürümü kurulmaya hazır.\nLütfen dikkat: Güncelleme sırasında askıya alınmış sekmeleriniz kısa bir süre kaybolacaktır." },
   "html_update_info_nobackup_prefix": { "message": "Şu anki oturumunuzun buradan kopyasını dışarı aktarma yapmanızı öneririz " },
   "html_update_info_nobackup_suffix": { "message": " güncellemeye devam etmeden önce." },
   "html_update_info_withbackup": { "message": "Şu anki sekmenin oturum yedeğini almak için uygun zaman olabilir." },
