--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -1,7 +1,7 @@
 {
-    "ext_extension_name": { "message": "The Great Suspender" },
+    "ext_extension_name": { "message": "The Great Suspender++" },
     "ext_extension_description": { "message": "冻结暂时用不到的标签页，以便释放系统资源。" },
-    "ext_default_title": { "message": "The Great Suspender" },
+    "ext_default_title": { "message": "The Great Suspender++" },
     "ext_cmd_toggle_tab_suspension_description": { "message": "冻结/恢复当前标签页" },
     "ext_cmd_toggle_tab_pause_description": { "message": "暂停/取消暂停当前标签页的冻结" },
     "ext_cmd_suspend_selected_tabs_description": { "message": "冻结已选择标签页" },
@@ -48,7 +48,7 @@
     "html_history_saved_sessions": { "message": "已储存会话" },
     "html_history_import_session": { "message": "导入会话" },
     "html_notice_title": { "message": "通知" },
-    "html_notice_important_notice": { "message": "来自 The Great Suspender 的重要通知" },
+    "html_notice_important_notice": { "message": "来自 The Great Suspender++ 的重要通知" },
     "html_options_title": { "message": "设置" },
     "html_options_suspend_title": { "message": "标签页自动冻结" },
     "html_options_suspended_title": { "message": "冻结的标签页" },
@@ -104,7 +104,7 @@
     "html_options_whitelist_tooltip_line2": { "message": "要在一行中将多个网站列入白名单，可以指定 URL 的一部分:" },
     "html_options_whitelist_tooltip_line3": { "message": "您还可以通过正则表达式将 URL 添加白名单:" },
     "html_options_whitelist_test": { "message": "测试白名单" },
-    "html_options_other_enable_context_menu": { "message": "把 The Great Suspender 加到右键菜单" },
+    "html_options_other_enable_context_menu": { "message": "把 The Great Suspender++ 加到右键菜单" },
     "html_options_other_enable_context_menu_tooltip_line1": { "message": "将控件添加到网页的右键单击菜单。" },
     "html_options_other_enable_context_menu_tooltip_line2": { "message": "这样，您就可以访问扩展中在其他地方无法使用的高级冻结操作了。" },
     "html_options_other_enable_context_menu_tooltip_line3": { "message": "" },
@@ -170,7 +170,7 @@
     "html_permissions_backup": { "message": "请注意：改变这个设置可能会使你当前所有的冻结标签页短暂的消失。\n为了以防万一，最好对当前标签页的会话的做备份。" },
     "html_update_title": { "message": "更新" },
     "html_update_heading2": { "message": "即将变得更好" },
-    "html_update_info": { "message": "一个新版本的 The Great Suspender 已准备好安装。\n请注意：冻结的页面将在更新过程中暂时消失。" },
+    "html_update_info": { "message": "一个新版本的 The Great Suspender++ 已准备好安装。\n请注意：冻结的页面将在更新过程中暂时消失。" },
     "html_update_info_withbackup": { "message": "为了以防万一，最好对当前标签页的会话的做备份。" },
     "html_update_info_nobackup_prefix": { "message": "强烈建议您在继续更新之前在 " },
     "html_update_info_nobackup_suffix": { "message": " 导出当前标签页会话的备份。" },
