chore: update naming again

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1,7 +1,7 @@
 {
-    "ext_extension_name": { "message": "The Great Suspender++" },
+    "ext_extension_name": { "message": "The Greater Suspender" },
     "ext_extension_description": { "message": "Lass deinen Computer geschmeidiger laufen, in dem du Tabs aussetzen lässt, die du nicht benutzt" },
-    "ext_default_title": { "message": "The Great Suspender++" },
+    "ext_default_title": { "message": "The Greater Suspender" },
     "ext_cmd_toggle_tab_suspension_description": { "message": "Aktiven Tab aussetzen/aufwachen" },
     "ext_cmd_toggle_tab_pause_description": { "message": "Aussetzen des aktiven Tabs pausieren/fortführen" },
     "ext_cmd_suspend_selected_tabs_description": { "message": "Ausgewählte Tabs aussetzen" },
@@ -48,7 +48,7 @@
     "html_history_saved_sessions": { "message": "Gespeicherte Sitzungen" },
     "html_history_import_session": { "message": "Sitzung importieren" },
     "html_notice_title": { "message": "Mitteilung" },
-    "html_notice_important_notice": { "message": "Wichtige Mitteilung von The Great Suspender++" },
+    "html_notice_important_notice": { "message": "Wichtige Mitteilung von The Greater Suspender" },
     "html_options_title": { "message": "Einstellungen" },
     "html_options_suspend_title": { "message": "Automatisches Tab Aussetzen" },
     "html_options_suspended_title": { "message": "Ausgesetzte Tabs" },
@@ -104,7 +104,7 @@
     "html_options_whitelist_tooltip_line2": { "message": "Um mehrere Seiten in einer Zeile zuzulassen, kannst du stattdessen einen Teil der URL angeben:" },
     "html_options_whitelist_tooltip_line3": { "message": "Du kannst auch reguläre Ausdrücke verwenden, wenn der Text von Schrägstrichen eingeschlossen ist:" },
     "html_options_whitelist_test": { "message": "Zulässige Seiten testen" },
-    "html_options_other_enable_context_menu": { "message": "Füge The Great Suspender++ zum Rechtsklick-Kontextmenü hinzu" },
+    "html_options_other_enable_context_menu": { "message": "Füge The Greater Suspender zum Rechtsklick-Kontextmenü hinzu" },
     "html_options_other_enable_context_menu_tooltip_line1": { "message": "Macht Einstellungen der Erweiterung im Rechtsklick-Kontextmenü einer Webseite verfügbar." },
     "html_options_other_enable_context_menu_tooltip_line2": { "message": "Das ermöglicht den Zugriff auf umfangreichere Aktionen, die sonst" },
     "html_options_other_enable_context_menu_tooltip_line3": { "message": "nicht in der Erweiterung zu finden sind." },
@@ -170,7 +170,7 @@
     "html_permissions_backup": { "message": "Hinweis: Das Ändern der Option lässt deine ausgesetzten Tabs kurz verschwinden.\nFür den Fall der Fälle solltest du jetzt eine Sicherung der aktuellen Sitzung anlegen." },
     "html_update_title": { "message": "Aktualisierung" },
     "html_update_heading2": { "message": "wird jetzt noch besser" },
-    "html_update_info": { "message": "Eine neue Version von The Great Suspender++ kann installiert werden.\nHinweis: Während der Aktualisierung verschwinden die ausgesetzten Tabs für kurze Zeit." },
+    "html_update_info": { "message": "Eine neue Version von The Greater Suspender kann installiert werden.\nHinweis: Während der Aktualisierung verschwinden die ausgesetzten Tabs für kurze Zeit." },
     "html_update_info_withbackup": { "message": "Für den Fall der Fälle solltest du eine Sicherung der aktuellen Sitzung anlegen." },
     "html_update_info_nobackup_prefix": { "message": "Empfehlung: exportiere eine Kopie deiner aktuellen Sitzung von " },
     "html_update_info_nobackup_suffix": { "message": " bevor du die Aktualisierung durchführst." },
