--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,7 +1,7 @@
 {
-    "ext_extension_name": { "message": "The Great Suspender++" },
+    "ext_extension_name": { "message": "The Greater Suspender" },
     "ext_extension_description": { "message": "Заставь свой браузер работать быстрее, приостанавливая неактивные вкладки" },
-    "ext_default_title": { "message": "The Great Suspender++" },
+    "ext_default_title": { "message": "The Greater Suspender" },
     "ext_cmd_toggle_tab_suspension_description": { "message": "Приостановить/Возобновить активную вкладку" },
     "ext_cmd_toggle_tab_pause_description": { "message": "Поставить на паузу/Возобновить приостановку активной вкладки" },
     "ext_cmd_suspend_selected_tabs_description": { "message": "Приостановить выбранные вкладки" },
@@ -48,7 +48,7 @@
     "html_history_saved_sessions": { "message": "Сохранённые сессии" },
     "html_history_import_session": { "message": "Импорт сессии" },
     "html_notice_title": { "message": "Уведомление" },
-    "html_notice_important_notice": { "message": "Важное уведомление от The Great Suspender++" },
+    "html_notice_important_notice": { "message": "Важное уведомление от The Greater Suspender" },
     "html_options_title": { "message": "Настройки" },
     "html_options_suspend_title": { "message": "Автоматическая приостановка вкладок" },
     "html_options_suspended_title": { "message": "Приостановленные вкладки" },
@@ -104,7 +104,7 @@
     "html_options_whitelist_tooltip_line2": {"message": "Чтобы не перечислять несколько сайтов, Вы можете указать совпадающую часть URL:"},
     "html_options_whitelist_tooltip_line3": {"message": "Вы также можете использовать регулярные выражения, используя в тексте косые черты:"},
     "html_options_whitelist_test": { "message": "Протестировать белый список" },
-    "html_options_other_enable_context_menu": {"message": "Добавить The Great Suspender++ в контекстное меню правой кнопки мыши"},
+    "html_options_other_enable_context_menu": {"message": "Добавить The Greater Suspender в контекстное меню правой кнопки мыши"},
     "html_options_other_enable_context_menu_tooltip_line1": { "message": "Добавить элементы управления для этого расширения в контекстное меню веб-страницы." },
     "html_options_other_enable_context_menu_tooltip_line2": { "message": "Это даст Вам доступ к дополнительным действиям с вкладками, которые" },
     "html_options_other_enable_context_menu_tooltip_line3": { "message": "недоступны в другом месте расширения." },
@@ -170,7 +170,7 @@
     "html_permissions_backup": { "message": "Примечание: изменение этой опции приведет к временному исчезновению всех приостановленных вкладок.\nНа всякий случай рекомендуем сделать резервную копию вкладок текущей сессии в разделе \"Управление сессиями\"." },
     "html_update_title": { "message": "Обновление" },
     "html_update_heading2": { "message": "становится всё лучше" },
-    "html_update_info": { "message": "Новая версия The Great Suspender++ готова к установке.\nПримечание: в процессе обновления приостановленные вкладки могут временно пропасть." },
+    "html_update_info": { "message": "Новая версия The Greater Suspender готова к установке.\nПримечание: в процессе обновления приостановленные вкладки могут временно пропасть." },
     "html_update_info_withbackup": { "message": "На всякий случай рекомендуется сделать резервную копию вкладок текущей сессии." },
     "html_update_info_nobackup_prefix": { "message": "Рекомендуется сделать экспорт текущей сессии" },
     "html_update_info_nobackup_suffix": { "message": " перед обновлением расширения." },
