--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1,7 +1,7 @@
 {
-    "ext_extension_name": { "message": "The Great Suspender++" },
+    "ext_extension_name": { "message": "The Greater Suspender" },
     "ext_extension_description": { "message": "凍結暫時用不到的分頁，達到系統資源釋放。" },
-    "ext_default_title": { "message": "The Great Suspender++" },
+    "ext_default_title": { "message": "The Greater Suspender" },
     "ext_cmd_toggle_tab_suspension_description": { "message": "凍結/回復目前分頁" },
     "ext_cmd_toggle_tab_pause_description": { "message": "暫停/取消暫停目前分頁的凍結" },
     "ext_cmd_suspend_selected_tabs_description": { "message": "凍結已選擇分頁" },
@@ -48,7 +48,7 @@
     "html_history_saved_sessions": { "message": "已儲存記錄" },
     "html_history_import_session": { "message": "匯入記錄" },
     "html_notice_title": { "message": "通知" },
-    "html_notice_important_notice": { "message": "來自 The Great Suspender++ 的重要通知" },
+    "html_notice_important_notice": { "message": "來自 The Greater Suspender 的重要通知" },
     "html_options_title": { "message": "設定" },
     "html_options_suspend_title": { "message": "自動凍結分頁" },
     "html_options_suspended_title": { "message": "凍結的分頁" },
@@ -104,7 +104,7 @@
     "html_options_whitelist_tooltip_line2": { "message": "要在一列中將多個網站列入白名單，可以指定網址的一部分：" },
     "html_options_whitelist_tooltip_line3": { "message": "您還可以使用斜線包起來的文字來指定正規表示式：" },
     "html_options_whitelist_test": { "message": "測試白名單" },
-    "html_options_other_enable_context_menu": { "message": "把 The Great Suspender++ 加到右鍵選單" },
+    "html_options_other_enable_context_menu": { "message": "把 The Greater Suspender 加到右鍵選單" },
     "html_options_other_enable_context_menu_tooltip_line1": { "message": "將擴充套件新增到網頁的右鍵選單。" },
     "html_options_other_enable_context_menu_tooltip_line2": { "message": "這樣，您就可以訪問程序中其他位置無法使用的進階凍結操作。" },
     "html_options_other_enable_context_menu_tooltip_line3": { "message": "" },
@@ -170,7 +170,7 @@
     "html_permissions_backup": { "message": "請註意：改變這個設定可能會使你當前所有的暫停分頁短暫的消失。\n以防萬一，最好對當前分頁的瀏覽階段的做備份。" },
     "html_update_title": { "message": "更新" },
     "html_update_heading2": { "message": "即將變得更好" },
-    "html_update_info": { "message": "一個新版本的 The Great Suspender++ 已準備好安裝。\n請注意：凍結分頁將在更新過程中暫時消失。" },
+    "html_update_info": { "message": "一個新版本的 The Greater Suspender 已準備好安裝。\n請注意：凍結分頁將在更新過程中暫時消失。" },
     "html_update_info_withbackup": { "message": "請在繼續之前儲存目前瀏覽階段的備份。" },
     "html_update_info_nobackup_prefix": { "message": "強烈建議您在繼續之前從" },
     "html_update_info_nobackup_suffix": { "message": " 儲存目前瀏覽階段的備份。" },
